--- a/client/public/index.html
+++ b/client/public/index.html
@@ -39,7 +39,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
-    <title>Yuki's Guitar</title>
+    <title>Sunday Scratch Blitz</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
